# canvas_lms_connector

./: Cargo.toml  Estrutura.graffle  README.md
src/: assignment.rs  canvas.rs  canvas_credentials.rs  connection.rs  course.rs  credentials.rs  lib.rs  rubric.rs  rubric_downloaded.rs  rubric_submission.rs  student.rs  submission.rs
