[package]
name = "canvas_lms_connector"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "This library provides a range of functionalities for interacting with the Canvas Learning Management System API."
repository = "https://github.com/afmiguel/canvas_lms_connector"
readme = "README.md"
keywords = ["canvas", "lms", "api", "connector", "rust"]
categories = ["web-programming", "network-programming"]
authors = ["Prof. Afonso Miguel - PUCPR"]
documentation = "https://docs.rs/canvas_lms_connector"

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
keyring = "2.0.5"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
std-semaphore = "0.1.0"
log = "0.4.20"
once_cell = "1.8.0"
regex = "1.10.5"
dialoguer = "0.11.0"

[features]
use_env_credentials = []
